0.221 2023-10-10
  [Internal Changes]
    * IO::Handle#set_blocking method always perform a system call.
    * configure method is implemented in IO::File class and it is called from new and new_from_fd method.
  [Incompatible Changes]
    * Blocking option ins IO::Socket and its child classes is not allowed. Its blocking mode is always non-blocking mode.
  [Bug Fix]
    * Fix a bug that IO::Socket and its child classes are not non-blocking mode.
    * Fix a bug that acceptted client is not non-blocking mode.
    
0.220001 2023-10-09
  [Test Fix]
    * Disable server tests for IO::Socket::IP for Windows segfault for now.
0.220 2023-10-09
  [New Features]
    * Add IO#open method.
    * Add IO#opendir method.
  [Test Improvement]
    * Add tests for IO::Socket::IP server features with goroutines.
0.219 2023-06-14
  [Support Changes]
    * Does not support 32bit systems.
  [Requirement Changes]
    * Require SPVM::Sys 0.524.
    * Require Perl v5.20.3.
    * Remove Test::TCP requirement.
    * Remove IO 1.55 requirement.
    * Remove Mojolicious requirement.
    
  [New Features]
    * Add IO::Socket#accept method. This has existed, but not documented.
    * Add IO::Socket::IP#accept method.
    * Add IO::Socket::INET#accept method.
    * Add IO::Socket::INET6#accept method.
    * Add IO::Socket::UNIX#accept method.
  [Incompatible Changes]
    * The return type of IO::Socket::INET is changed from IO::Socket::IP to IO::Socket::INET.
    * The return type of IO::Socket::INET6 is changed from IO::Socket::IP to IO::Socket::INET6.
  [Bug Fix]
    * Fix the bug that IO::Handle#set_blocking method set Blocking field to a wrong value.
0.218 2023-06-03
  [Requirement Changes]
    * Require SPVM::Sys 0.520.
0.217 2023-06-01
  [New Features]
    * Add IO::Socket#sendto method.
    * Add IO::Socket#recvfrom method.
  [Test Improvement]
    * Add tests for IO::Select using a test HTTP server.
  [Incompatible Changes]
    * Remove an argument of IO::Socket#shutdown method.