@@ -4,6 +4,7 @@
     * configure method is implemented in IO::File class and it is called from new and new_from_fd method.
   [Incompatible Changes]
     * Blocking option ins IO::Socket and its child classes is not allowed. Its blocking mode is always non-blocking mode.
+    * IO::Socket is an abstract class, and remove new method.
   [Bug Fix]
     * Fix a bug that IO::Socket and its child classes are not non-blocking mode.
     * Fix a bug that acceptted client is not non-blocking mode.
